syntax = "proto3";
package Database_Service.Grpc.DataServices;
import "protobuf-net/bcl.proto"; // schema for protobuf-net's handling of core .NET types

message DataServiceRequest {
   int32 Id = 1;
}
message DataServiceRequestWithEntity_Qr {
   int32 Id = 1;
   Qr Data = 2;
}
message DataServiceResponse_Qr {
   bool IsSuccess = 1;
   string Message = 2;
   Qr Data = 3;
}
message Qr {
   int32 Id = 1;
   string QrImagePath = 2;
   .bcl.DateTime CreatedAt = 3;
   int32 UserId = 4;
}
service QrDataService {
   rpc Create (DataServiceRequestWithEntity_Qr) returns (DataServiceResponse_Qr);
   rpc Delete (DataServiceRequest) returns (DataServiceResponse_Qr);
   rpc Get (DataServiceRequest) returns (DataServiceResponse_Qr);
   rpc GetByUserId (DataServiceRequest) returns (DataServiceResponse_Qr);
   rpc Update (DataServiceRequestWithEntity_Qr) returns (DataServiceResponse_Qr);
}
